Fixing menu on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,8 +16,9 @@
     color: white;
     font-size: 1.05em;
     font-weight: bold;
+    overflow: hidden;
 }
 
 .menu a {
-	margin-right: 15px;
+	margin-right: 12px;
 }
